# pdf2md-agent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  REQUIREMENTS.md  codex_pdf_to_md_pipeline_spec.md  pdf2md_agent_open_source_intro.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml
src/pdf2md_agent/: __init__.py  assets.py  chunking.py  cli.py  config.py  manifest.py  markdown.py  ocr.py  pipeline.py  preflight.py  utils.py  validation.py
src/pdf2md_agent/engines/: __init__.py  base.py  docling_engine.py  marker_engine.py  pymupdf4llm_engine.py  text_engine.py
tests/: test_chunking.py  test_cli_smoke.py  test_preflight.py  test_validation.py
